--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <div></div>
     <div id="tools">
+      <h1>hello</h1>
       <button id="reset">Reset</button>
       <button id="export-image">Save Image</button>
       <button id="checkAutomatonType">Check FA Type</button>
