--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div id="mode">
         <button data-key="move" class="active">move</button>
         <button data-key="design">design</button>
-      </div>git commit -m "first commit"
+      </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.9.3/intro.min.js"
       integrity="sha256-fOPHmaamqkHPv4QYGxkiSKm7O/3GAJ4554pQXYleoLo="
